# rust_temp

./: .envrc  .rustfmt.toml  Cargo.toml  flake.nix
src/: main.rs
