[package]
name = "demo"
version = "0.1.0"
rust-version = "1.89.0"
edition = "2024"
authors = ["Indransh Sharma <indransh.0804.sharma@gmail.com>"]
description = "Starter Rust demo Project"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
